unpackaged/main/default/objects/Token_Metadata__mdt/Token_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Token Metadata</label>
    <pluralLabel>Tokens Metadata</pluralLabel>
</CustomObject>