unpackaged/main/default/objects/Token_Metadata__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <length>250</length>
    <type>Text</type>
</CustomField>