unpackaged/main/default/objects/Token_Metadata__mdt/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>